<resources>
    <string name="app_name">CodeBlack</string>
    <string name="hintID">Plase enter student id</string>
    <string name="hintName">Plase enter student name</string>
    <string name="hintAdd">Plase enter student address</string>
    <string name="hintCon">Plase enter contact no</string>
    <string name="SaveB">SAVE</string>
    <string name="ShowB">SHOW</string>
    <string name="UpdB">UPDATE</string>
    <string name="DelB">DELETE</string>
    <string name="propertyType">Property Type</string>
    <string name="RaD">Advertisment Details</string>
    <string name="accommodates">Accommodates</string>
    <string name="des1">The maximum number of people who can sleep comfortably</string>
    <string name="des2">given the total bed space</string>
    <string name="hintAdults">Adults</string>
    <string name="welDes1">Let\'s get started</string>
    <string name="welDes2">Sign into view options what we have</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="welDes3">Not a member ? please register</string>
    <string name="regLabel1">Register</string>
    <string name="regHintEmail">Enter Your E-mail</string>
    <string name="regHintPass">Enter Password</string>
    <string name="regBtn">REGISTER</string>
    <string name="txtProfile">Profile</string>
    <string name="regLoginTxt">Already have account? Login</string>
    <string name="logLable1">Login</string>
    <string name="logNothaveAcc">Not have account? Register</string>
    <string name="logBtn">Login</string>
    <string name="fpRecover">Forgotten Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noOfadult">Adult</string>
    <string name="noOfChildren">Children</string>
    <string name="adsBed">Bedroom</string>
    <string name="adsKic">Kitchen</string>
    <string name="adsBath">Bathroom</string>
    <string name="nobed">1</string>
    <string name="noKitc">1</string>
    <string name="noBath">1</string>
    <string name="adsPrice">Rs: 2000.00</string>
    <string name="adsPrice1">Price For One Night</string>
    <string name="adsTitle">Enter Your Advertisement Title</string>
    <string name="adsAddress">Street Address</string>
    <string name="adsState">State/Province</string>
    <string name="adsPostal">Postal Code</string>
    <string name="adsCity">City</string>
    <string name="adsDesPlace">Describe your place</string>
    <string name="desYourPlace">Type here</string>
    <string name="adsTitleTv">Title</string>
    <string name="priceType">LKR</string>
    <string name="hostDetails">Host Details</string>
    <string name="adsContactTv">Contact Details</string>
    <string name="adsHostNumber">+94</string>
    <string name="adsHouseRule">House rules (optical)</string>
    <string name="curentPass">Current Password</string>
    <string name="newPassword">New Password</string>
</resources>